--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - docker build -t hugocordz/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run -e CI=true USERNAME/react-test npm test
+  - docker run -e CI=true hugocordz/react-test npm test
 
 after_success:
   - docker build -t hugocordz/multi-client ./client
