--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ after_success:
   - docker build -t hugocordz/multi-ngnix ./nginx
   - docker build -t hugocordz/multi-server ./server
   - docker build -t hugocordz/multi-worker ./worker
-  - echo "$DOCKER_PASSWORD" | docker login -u "DOCKER_ID" --password-stdin
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   - docker push hugocordz/multi-client
   - docker push hugocordz/multi-nginx
   - docker push hugocordz/multi-server
